bugfix: beskrivelse er ren fritekst, innfører unntak