@@ -1,8 +1,5 @@
 package no.nav.folketrygdloven.kalkulus.mappers;
 
-import static java.util.Arrays.asList;
-import static java.util.Collections.singletonList;
-
 import java.io.File;
 import java.io.IOException;
 import java.lang.annotation.Annotation;
@@ -11,8 +8,6 @@ import java.lang.reflect.Modifier;
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -32,32 +27,22 @@ import com.fasterxml.jackson.annotation.JsonIgnore;
 
 import no.nav.folketrygdloven.kalkulus.migrering.RegelSporingGrunnlagMigreringDto;
 import no.nav.folketrygdloven.kalkulus.migrering.RegelSporingPeriodeMigreringDto;
+import no.nav.folketrygdloven.kalkulus.opptjening.v1.Fritekst;
 
 public class ValiderKontraktDtoer {
 
 
     @SuppressWarnings("rawtypes")
-    private static final Map<Class, List<List<Class<? extends Annotation>>>> VALIDERINGSALTERNATIVER = new HashMap<Class, List<List<Class<? extends Annotation>>>>() {
-        {
-            put(String.class, asList(
-                    asList(Pattern.class, Size.class),
-                    asList(Pattern.class),
-                    singletonList(Digits.class)));
-            put(Long.class, asList(
-                    asList(Min.class, Max.class),
-                    asList(Digits.class)));
-            put(long.class, asList(
-                    asList(Min.class, Max.class),
-                    asList(Digits.class)));
-            put(Integer.class, singletonList(
-                    asList(Min.class, Max.class)));
-            put(int.class, singletonList(
-                    asList(Min.class, Max.class)));
-            put(BigDecimal.class, asList(
-                    asList(Min.class, Max.class, Digits.class),
-                    asList(DecimalMin.class, DecimalMax.class, Digits.class)));
-        }
-    };
+    private static final Map<Class, List<List<Class<? extends Annotation>>>> VALIDERINGSALTERNATIVER = Map.of(
+        String.class, List.of(List.of(Digits.class),
+            List.of(Pattern.class, Size.class), List.of(Pattern.class),
+            List.of(Fritekst.class, Size.class), List.of(Fritekst.class)),
+        Long.class, List.of(List.of(Min.class, Max.class), List.of(Digits.class)),
+        long.class, List.of(List.of(Min.class, Max.class), List.of(Digits.class)),
+        Integer.class, List.of(List.of(Min.class, Max.class)), int.class, List.of(List.of(Min.class, Max.class)),
+        BigDecimal.class, List.of(List.of(Min.class, Max.class, Digits.class),
+            List.of(DecimalMin.class, DecimalMax.class, Digits.class))
+    );
 
     public static boolean validerAlleDtoerIKontraken() throws IOException, ClassNotFoundException {
         var classes = getClasses("no.nav.folketrygdloven.kalkulus");
@@ -104,9 +89,9 @@ public class ValiderKontraktDtoer {
     private static List<List<Class<? extends Annotation>>> getVurderingsalternativer(Field field) {
         var type = field.getType();
         if (field.getType().isEnum()) {
-            return Collections.singletonList(Collections.singletonList(Valid.class));
+            return List.of(List.of(Valid.class));
         } else if (Collection.class.isAssignableFrom(type) || Map.class.isAssignableFrom(type)) {
-            return singletonList(List.of(Valid.class, Size.class));
+            return List.of(List.of(Valid.class, Size.class));
         }
         return VALIDERINGSALTERNATIVER.get(type);
     }
@@ -124,7 +109,7 @@ public class ValiderKontraktDtoer {
         return fields.stream().filter(f -> !Modifier.isStatic(f.getModifiers())).collect(Collectors.toList());
     }
 
-    private static Class<?>[] getClasses(String packageName)
+    private static List<Class<?>> getClasses(String packageName)
             throws ClassNotFoundException, IOException {
         var classLoader = Thread.currentThread().getContextClassLoader();
         assert classLoader != null;
@@ -139,7 +124,7 @@ public class ValiderKontraktDtoer {
         for (var directory : dirs) {
             classes.addAll(findClasses(directory, packageName));
         }
-        return classes.toArray(new Class[classes.size()]);
+        return classes;
     }
 
     private static List<Class<?>> findClasses(File directory, String packageName) throws ClassNotFoundException {
